Project

General

Profile

Actions

Bug #7239

closed

Can't read from subprocess when run with rubyw on windows

Bug #7239: Can't read from subprocess when run with rubyw on windows

Added by mthiede (Martin Thiede) almost 14 years ago. Updated almost 13 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 1.9.3p194 (2012-04-20) [i386-mingw32]
Backport:
[ruby-core:48542]

Description

File.open 'res.txt', 'w' do |f|
f << dir
end

when run with "rubyw", the file "res.txt" will be empty, when run with "ruby" it will contain the output of the "dir" command

the problem is present in Ruby versions 1.9.1, 1.9.2 and 1.9.3
the problem is not present in Ruby version 1.8.7


Related issues 1 (0 open1 closed)

Related to Backport193 - Backport #9232: Please Backport Bug #7239 to Ruby 1.9.3Closedusa (Usaku NAKAMURA)Actions
Actions

Also available in: PDF Atom