* process.c (redirect_dup2): set standard handles when new fd is stdio,   because if there is no allocated console at the moment Windows does   not automatically associate it for child process's standard handle.   this is adhoc workaround.   reported by Martin Thiede at [ruby-core:48542] [Bug #7239].

* io.c (rb_cloexec_dup2): ditto.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37388 b2dd03c8-39d4-4d8f-98ff-823fe69b080e